src/test/ui/type-alias-impl-trait/no_inferrable_concrete_type.min_tait.stderr
error[E0658]: type alias impl trait is not permitted here
  --> $DIR/no_inferrable_concrete_type.rs:16:12
   |
LL |     let _: Foo = std::mem::transmute(0u8);
   |            ^^^
   |
   = note: see issue #63065 <https://github.com/rust-lang/rust/issues/63065> for more information
   = help: add `#![feature(impl_trait_in_bindings)]` to the crate attributes to enable

error: could not find defining uses
  --> $DIR/no_inferrable_concrete_type.rs:10:12
   |
LL | type Foo = impl Copy;
   |            ^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
